Footer, removed "join us" page
fixed bugs on header

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,21 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 	<div class="meta row">
 		<div class="four columns offset-by-eight">
 			<div class="meta-content">
@@ -31,7 +46,7 @@
 			<div class="logo-container"></div>
 		</div>
 		<div class="seven columns">
-			<ul class="nav">
+			<ul class="main-nav nav">
 				<li class="nav-item active">
 					<a href="index.html">Home</a>
 				</li>
@@ -43,9 +58,6 @@
 				</li>
 				<li class="nav-item">
 					<a href="submit.html">Submit A Film</a>
-				</li>
-				<li class="nav-item">
-					<a href="join.html">Join us</a>
 				</li>
 			</ul>
 		</div>
@@ -59,13 +71,18 @@
 			</div>
 			<div class="three columns">
 				<!-- <div class="vert-pad"></div> -->
-				<p class="title">Global Health<br/>Film Festival</p>
+				<p class="title">Global Health<br/>Film Festival
+				</p>
 				<br>
 				<p class="home-text"><span class="strong">'The Right to Heal' Premier</span>
 				<br>
 				Saturday July 16th, 2013
 				<br>
 				Doors open 7pm
+				<br>
+				</p>
+				<p class="home-text pad">Movie @8pm followed by Panel Q+A and performance by XX 
+				</p>
 			</div>
 		
 		<div class="twelve columns">
@@ -73,10 +90,34 @@
 	</div>
 
 	<div class="footer row">
-		<div class="twelve columns">
+		<div class="four columns">
+				<p>
+						IGOT Global Health Film Festival
+						<br>
+						2550 23rd Street
+						<br>
+						Building 9, 2nd Floor
+						<br>
+						San Francisco, CA 94110
+						<br>Office: +01 (415) 206-4261
+				</p>
+		</div>
+		<div class="four columns">
+			<p class="strong">Get in touch:</p>
+			<p>info@globalhealth.com</p>
+			<p><a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform">Sign up to volunteer</a></p>
+			<p><a href"https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform">Join our mailing list</a></p>
+		</div>
+		<div class="four columns">
+			<a class="twitter-timeline" href="https://twitter.com/michipork" data-widget-id="306238902165979137">	Tweets by @michipork
+			</a>
+			<script>
+				!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+			</script>
 		</div>
 	</div>
 
+	
 	<script src="javascripts/jquery.js"></script>
 	<script src="javascripts/foundation.min.js"></script>
 	<script src="javascripts/app.js"></script>
