--- a/app/partners.html
+++ b/app/partners.html
@@ -18,6 +18,21 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
@@ -31,7 +46,7 @@
 				<div class="logo-container"></div>
 			</div>
 			<div class="seven columns">
-				<ul class="nav">
+				<ul class="main-nav nav">
 					<li class="nav-item">
 						<a href="index.html">Home</a>
 					</li>
@@ -43,9 +58,6 @@
 					</li>
 					<li class="nav-item">
 						<a href="submit.html">Submit A Film</a>
-					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
 					</li>
 				</ul>
 			</div>
@@ -78,11 +90,10 @@
 						<div class="partner-image">
 							<img src="http://placehold.it/200x150&text=image+two+here"></div>
 					</div>
-					<br>
 					<div class="nine columns">
 						<div class="partner-text">
 							<p class="name">IGOT</p>
-							<p class="long-text">
+							<p class="long-text pad">
 								This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
@@ -93,59 +104,54 @@
 						<div class="partner-image">
 							<img src="http://placehold.it/200x150&text=image+two+here"></div>
 					</div>
-					<br>
 					<div class="nine columns">
 						<div class="partner-text">
 							<p class="name">GPAS</p>
-							<p class="long-text">
+							<p class="long-text pad">
 								This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
 					</div>
 				</div>
-						<div class="row vert-pad">
-							<div class="three columns">
-								<div class="partner-image">
-									<img src="http://placehold.it/200x150&text=image+two+here"></div>
-							</div>
-							<br>
-							<div class="nine columns">
-								<div class="partner-text">
-									<p class="name">Own2Feet</p>
-									<p class="long-text">
-										This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="three columns">
-								<div class="partner-image">
-									<img src="http://placehold.it/200x150&text=image+two+here">
-								</div>
-							</div>
-							<br>
-							<div class="nine columns">
-								<div class="partner-text">
-									<p class="name"> ALittle4Alot
-									</p>
-									<p class="long-text">
-										This is the description of partner four.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-									</p>
-								</div>
-							</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="name">Own2Feet</p>
+							<p class="long-text pad">
+								This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
 						</div>
 					</div>
 				</div>
-	
-	<div class="footer row">
-		<div class="twelve columns">
-			<div class="content">This is some footer content</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="partner-image">
+							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+					</div>
+					<div class="nine columns">
+						<div class="partner-text">
+							<p class="name">ALittle4Alot</p>
+							<p class="long-text pad">
+								This is the description of partner four.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
 
-	<script src="javascripts/jquery.js"></script>
-	<script src="javascripts/foundation.min.js"></script>
-	<script src="javascripts/app.js"></script>
+		<div class="footer row">
+			<div class="twelve columns">
+				<div class="content">This is some footer content</div>
+			</div>
+		</div>
+
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
