--- a/app/submitnow.html
+++ b/app/submitnow.html
@@ -17,6 +17,21 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
@@ -30,7 +45,7 @@
 				<div class="logo-container"></div>
 			</div>
 			<div class="seven columns">
-				<ul class="nav">
+				<ul class="main-nav nav">
 					<li class="nav-item">
 						<a href="index.html">Home</a>
 					</li>
@@ -42,9 +57,6 @@
 					</li>
 					<li class="nav-item active">
 						<a href="submit.html">Submit A Film</a>
-					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
 					</li>
 				</ul>
 			</div>
@@ -58,58 +70,76 @@
 							<li class="nav-item">
 								<a href="guidelines.html">Guidelines</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a href="submitnow.html">Submit Now</a>
 							</li>
 						</ul>
 					</div>
 				</div>
-		<div class="row">
-		<div class="twelve columns">
-			<p class="strong">Submission instructions</p>
-			<p>
-				The submission season for 2013 will be open through May 10, 2013. No films will be accepted outside this time period. All submissions must come through our online form (link below).
-			</p>
-			<p>
-				Before clicking on the link to fill out the submission form, please be prepared to provide the following:
-			</p>
-			<div class="twelve columns">
-				<ol>
-					<li>Contact Information</li>
-					<li>Full film information including a short synopsis</li>
-					<li>A link to an online screener OR 2 DVDs</li>
-					<li>Acceptance of Rights and Releases</li>
-				</ol>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="strong half pad">Submission Instructions</p>
+						<p class="small">
+							Submissions will be open through May 10, 2013. No films will be accepted after May 10, 2013. All submissions must come through our online form here (hyperlink) or see the link below.
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="strong half pad">Be prepared to provide the following on the form:</p>
+						<div class="half">
+							<ol class="small">
+								<li>Contact Information</li>
+								<li>
+									Full film information including a short (5-7 sentences) synopsis
+								</li>
+								<li>A link to an online screener OR 2 DVDs</li>
+								<li>Acceptance of Rights and Releases</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="twelve columns">
+						<p class="strong half">Submission Materials</p>
+						<p class="small">
+							We highly encourage you to submit the film and ALL materials online. We will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
+						</p>
+						<p class="strong half pad">Shipping Information</p>
+						<p class="small">
+							Mailing address below. If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="submit-now">Submit Now </p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="strong half">OR Send entries to:</p>
+						<p class="small">
+							IGOT Global Health Film Festival
+							<br>
+							2550 23rd Street
+							<br>
+							Building 9, 2nd Floor
+							<br>
+							San Francisco, CA 94110
+							<br>Office: +01 (415) 206-4261</p>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	<h4>Submit Now - hyperlink to form</h4>
-	<p>
-		If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
-	</p>
-	<div class="twelve columns"></div>
-	<p class="strong">Submission Materials</p>
-	<p>
-		We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
-	</p>
-	<p class="strong">Shipping Information</p>
-	<p>
-		If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
-	</p>
-	<h6>Send entries to:</h6>
-	<p>
-		IGOT Global Health Film Festival
-2550 23rd Street
-Building 9, 2nd Floor
-San Francisco, CA 94110
-Office: +01 (415) 206-4261
-	</p>
-
-	</div>
-</div>
-	<div class="footer row">
-		<div class="twelve columns">
-			<div class="content">This is some footer content</div>
+		<div class="footer row">
+			<div class="twelve columns">
+				<div class="content">This is some footer content</div>
+			</div>
 		</div>
-	</div>
-
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
+</body>
+	</html>
