--- a/app/who.html
+++ b/app/who.html
@@ -18,6 +18,21 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
@@ -43,9 +58,6 @@
 					</li>
 					<li class="nav-item">
 						<a href="submit.html">Submit A Film</a>
-					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
 					</li>
 				</ul>
 			</div>
@@ -87,9 +99,8 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<br>
 							<p class="name">Amber Caldwell</p>
-							<p class="long-text">
+							<p class="long-text pad">
 								This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
@@ -102,9 +113,8 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<br>
 							<p class="name">Jaymie Henry-Ang:</p>
-							<p class="long-text">
+							<p class="long-text pad">
 								This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
@@ -113,13 +123,13 @@
 				<div class="row vert-pad">
 					<div class="three columns">
 						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+							<img src="http://placehold.it/200x150&text=image+two+here">
+						</div>
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<br>
 							<p class="name">Andrew Pedkte</p>
-							<p class="long-text">
+							<p class="long-text pad">
 								This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
@@ -128,13 +138,14 @@
 				<div class="row">
 					<div class="three columns">
 						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+							<img src="http://placehold.it/200x150&text=image+two+here">
+						</div>
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<br>
-							<p class="name">Stephanie Tomasky</p>
-							<p class="long-text">
+							<p class="name">Stephanie Tomasky
+							</p>
+							<p class="long-text pad">
 								This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
 						</div>
