--- a/app/guidelines.html
+++ b/app/guidelines.html
@@ -18,6 +18,21 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
@@ -31,7 +46,7 @@
 				<div class="logo-container"></div>
 			</div>
 			<div class="seven columns">
-				<ul class="nav">
+				<ul class="main-nav nav">
 					<li class="nav-item ">
 						<a href="index.html">Home</a>
 					</li>
@@ -44,9 +59,6 @@
 					<li class="nav-item">
 						<a href="submit.html">Submit A Film</a>
 					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
-					</li>
 				</ul>
 			</div>
 		</div>
@@ -56,7 +68,7 @@
 				<div class="row">
 					<div class="twelve columns">
 						<ul class="nav sub-nav">
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a href="guidelines.html">Guidelines</a>
 							</li>
 							<li class="nav-item">
@@ -69,10 +81,10 @@
 				<div class="row">
 					<div class="twelve columns half">
 						<h4>Guidelines for Submission</h4>
-						<div class="half">
+						<div class="small strong">
 							<p>Festival Date: July 6, 2013</p>
 						</div>
-						<div class="half">
+						<div class="small strong">
 							<p>Deadline for Submission: May 10, 2013</p>
 						</div>
 					</div>
