--- a/app/schedule.html
+++ b/app/schedule.html
@@ -18,10 +18,25 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>The Right to Heal: Saturday, July 16th 2013</p>
+					<p>7pm Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
@@ -31,7 +46,7 @@
 				<div class="logo-container"></div>
 			</div>
 			<div class="seven columns">
-				<ul class="nav">
+				<ul class="main-nav nav">
 					<li class="nav-item">
 						<a href="index.html">Home</a>
 					</li>
@@ -43,9 +58,6 @@
 					</li>
 					<li class="nav-item">
 						<a href="submit.html">Submit A Film</a>
-					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
 					</li>
 				</ul>
 			</div>
@@ -64,9 +76,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="vert-pad"></div>
+				<div class="vert-pad">
+				</div>
+				<div class="row">
 				<div class="twelve columns">
 					<h4>Feature Film</h4>
+				</div>
 				</div>
 				<div class="row">
 					<div class= "three columns image">
@@ -78,9 +93,12 @@
 						</p>
 					</div>
 				</div>
-				<div class="vert-pad"></div>
+				<div class="pad">
+				</div>
+				<div class="row">
 				<div class="twelve columns">
 					<h5>Short Films</h5>
+				</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
@@ -126,10 +144,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="vert-pad"></div>
+				<div class="pad">
+				</div>
+				<div class="row">
 					<div class="twelve columns">
 						<h5>Panel of Experts</h5>
 					</div>
+				</div>
 					<div class="row">
 						<div class="three columns">
 							<div class="partner-image">
@@ -176,7 +197,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="vert-pad">
+					<div class="pad">
 					</div>
 			</div>
 		</div>
