--- a/app/submit.html
+++ b/app/submit.html
@@ -17,6 +17,21 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
+	<div class="row">
+		<div class="twelve columns">
+			<div id="social-icons">
+					<a href="http://www.facebook.com/YOUR_FB_IDENTIFIER" target="_blank">
+							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+					</a>
+					<a href="https://twitter.com/therighttoheal" target="_blank">
+							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+					</a>
+					<a href="http://instagram.com/michandrea" target="_blank">
+							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+					</a>
+			</div>
+		</div>
+	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
@@ -30,7 +45,7 @@
 				<div class="logo-container"></div>
 			</div>
 			<div class="seven columns">
-				<ul class="nav">
+				<ul class="main-nav nav">
 					<li class="nav-item">
 						<a href="index.html">Home</a>
 					</li>
@@ -42,9 +57,6 @@
 					</li>
 					<li class="nav-item active">
 						<a href="submit.html">Submit A Film</a>
-					</li>
-					<li class="nav-item">
-						<a href="join.html">Join us</a>
 					</li>
 				</ul>
 			</div>
@@ -64,109 +76,21 @@
 						</ul>
 					</div>
 				</div>
-
 				<div class="row">
-					<div class="twelve columns half">
-						<h4>Guidelines for Submission</h4>
-						<div class="half">
-							<p>Festival Date: July 6, 2013</p>
-						</div>
-						<div class="half">
-							<p>Deadline for Submission: May 10, 2013</p>
-						</div>
+					<div class="twelve columns">
 					</div>
 				</div>
-				<div class="row vert-pad">
-					<div class="sixcolumns half">
-						<p class="strong half">
-							We are looking for 15-20 minute films.Project must fit GHFF's categories. We currently support films in the following categories with some examples:
-						</p>
-					</div>
-					<div class="six columns half">
-						<p class="submit">SUBMIT NOW</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="six columns">
-						<p class="small">Injuries</p>
-						<p class="small">Maternal health</p>
-						<p class="small">Child health/injuries (e.g congenital defects)</p>
-						<p class="small">Injuries</p>
-						<p class="small">Other essestial surgical conditions</p>
-						<p class="small">Emergency Care</p>
-						<p class="half strong vert-pad">
-							Projects must explore a discrete issue in any of the categories mentioned. We are particularly interested in projects that also display:
-						</p>
-						<p class="small">Creative and innovative storytelling</p>
-						<p class="small">Ongoing social issue</p>
-						<p class="small">Potential for engagement</p>
-					</div>
-					<div class="six columns">
-						<p class="strong">Submission Materials</p>
-						<p>We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="twelve columns vert-pad">
-						<p class="half strong">
-							We do not accept films advertising a charity, NGO, NPO, or any commercial product, whether implicit or explicit in the film. Submitted films should either be in English or include English subtitles.
-								If a film is selected for theater presentation at the festival it is the responsibility of the filmmaker to provide GHFF with either an HDCAM tape or a 35mm film exhibition copy by June 15, 2013.
-						</p>
-					</div>
-				</div>
-
 			</div>
 		</div>
-
-		<!--<div class="row">
-		<div class="twelve columns">
-			<p class="strong">Submission instructions</p>
-			<p>
-				The submission season for 2013 will be open through May 10, 2013. No films will be accepted outside this time period. All submissions must come through our online form (link below).
-			</p>
-			<p>
-				Before clicking on the link to fill out the submission form, please be prepared to provide the following:
-			</p>
+		<div class="footer row">
 			<div class="twelve columns">
-				<ol>
-					<li>Contact Information</li>
-					<li>Full film information including a short synopsis</li>
-					<li>A link to an online screener OR 2 DVDs</li>
-					<li>Acceptance of Rights and Releases</li>
-				</ol>
+				<div class="content">This is some footer content
+				</div>
 			</div>
 		</div>
-	</div>
-	<h4>Submit Now - hyperlink to form</h4>
-	<p>
-		If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
-	</p>
-	<div class="twelve columns"></div>
-	<p class="strong">Submission Materials</p>
-	<p>
-		We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
-	</p>
-	<p class="strong">Shipping Information</p>
-	<p>
-		If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
-	</p>
-	<h6>Send entries to:</h6>
-	<p>
-		IGOT Global Health Film Festival
-2550 23rd Street
-Building 9, 2nd Floor
-San Francisco, CA 94110
-Office: +01 (415) 206-4261
-	</p>
-	<div class="footer row">
-		<div class="twelve columns">
-			<div class="content">This is some footer content</div>
-			--!>
-		</div>
-	</div>
 
 	<script src="javascripts/jquery.js"></script>
 	<script src="javascripts/foundation.min.js"></script>
 	<script src="javascripts/app.js"></script>
-</body>
-</html>
+	</body>
+		</html>
