--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,10 @@
 
 	<div class="header row">
 		<div class="five columns">
-			<div class="logo-container"></div>
-		</div>
+			<div class="logo-container">
+				<img src="images/ghff_logo_black.png">
+			</div>
+	</div>
 		<div class="seven columns">
 			<ul class="main-nav nav">
 				<li class="nav-item active">
@@ -73,7 +75,6 @@
 				<!-- <div class="vert-pad"></div> -->
 				<p class="title">Global Health<br/>Film Festival
 				</p>
-				<br>
 				<p class="home-text"><span class="strong">'The Right to Heal' Premier</span>
 				<br>
 				Saturday July 16th, 2013
