--- a/app/schedule.html
+++ b/app/schedule.html
@@ -43,7 +43,9 @@
 
 		<div class="header row">
 			<div class="five columns">
-				<div class="logo-container"></div>
+				<div class="logo-container">
+				<img src="images/ghff_logo_black.png">
+				</div>
 			</div>
 			<div class="seven columns">
 				<ul class="main-nav nav">
