--- a/app/submitnow.html
+++ b/app/submitnow.html
@@ -35,14 +35,16 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>The Right to Heal: Saturday, July 16th 2013</p>
+					<p>7pm Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
 
 		<div class="header row">
 			<div class="five columns">
-				<div class="logo-container"></div>
+				<div class="logo-container">
+					<img src="images/ghff_logo_black.png">
+				</div>
 			</div>
 			<div class="seven columns">
 				<ul class="main-nav nav">
