--- a/app/schedule.html
+++ b/app/schedule.html
@@ -36,7 +36,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>7pm Saturday, July 16th 2013</p>
+					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -78,7 +78,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vert-pad">
+				<div class="pad">
 				</div>
 				<div class="row">
 				<div class="twelve columns">
