--- a/app/submit.html
+++ b/app/submit.html
@@ -35,7 +35,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>The Right to Heal: Saturday, July 16th 2013</p>
+					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
