--- a/app/submitnow.html
+++ b/app/submitnow.html
@@ -35,7 +35,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>7pm Saturday, July 16th 2013</p>
+					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<p class="strong half pad">Submission Instructions</p>
+						<h4>Submission Instructions</h4>
 						<p class="small">
 							Submissions will be open through May 10, 2013. No films will be accepted after May 10, 2013. All submissions must come through our online form here (hyperlink) or see the link below.
 						</p>
@@ -115,8 +115,8 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="twelve columns">
-						<p class="submit-now">Submit Now </p>
+					<div class="twelve columns link">
+						<p class="submit-now"><a href="https://docs.google.com/forms/d/1w_fS7pr-sz5I2Le8Ix__pw6KHFYi3fEaDQEsqO-0uhI/viewform" target="_blank">Submit Now</a></p>
 					</div>
 				</div>
 				<div class="row">
