--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 	<div class="meta row">
 		<div class="four columns offset-by-eight">
 			<div class="meta-content">
-				<p>7pm Saturday, July 16th 2013</p>
+				<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
 			</div>
 		</div>
 	</div>
@@ -106,8 +106,11 @@
 		<div class="four columns">
 			<p class="strong">Get in touch:</p>
 			<p>info@globalhealth.com</p>
-			<p><a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform">Sign up to volunteer</a></p>
-			<p><a href"https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform">Join our mailing list</a></p>
+			<p> <a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank"> Sign the petition</a></p>
+			<p><a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a></p>
+			<p><a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Sign up to volunteer</a></p>
+			
+			
 		</div>
 		<div class="four columns">
 			<a class="twitter-timeline" href="https://twitter.com/michipork" data-widget-id="306238902165979137">	Tweets by @michipork
